clarified some markdown in analysis

--- a/notebooks/regression.ipynb
+++ b/notebooks/regression.ipynb
@@ -2118,7 +2118,8 @@
    "id": "c54960c7",
    "metadata": {},
    "source": [
-    "The output of the binary classification shows that about 65% of the LEGO sets from the dataset are not investment-worthy, and about 35% of the sets are worth investing in."
+    "The output of the binary classification shows that about 65% of the LEGO sets from the dataset are not investment-worthy, and about 35% of the sets are worth investing in.\n",
+    "This output also serves as a baseline for the next model to compare to."
    ]
   },
   {
