made analysis more presentation friendly

--- a/notebooks/02_analysis.ipynb
+++ b/notebooks/02_analysis.ipynb
@@ -5,8 +5,25 @@
    "id": "dd1612b0",
    "metadata": {},
    "source": [
-    "This notebook is used to implement the baseline regression analysis for the project.\n",
-    "The purpose of this analysis is to evaluate measurable characteristics of LEGO sets, such as price-per-piece, minifigure count, and age, to determine if a LEGO set is investment-worthy."
+    "# Project Analysis\n",
+    "## LEGO Secondary Market Investment Analysis\n",
+    "\n",
+    "### Purpose of This Notebook\n",
+    "\n",
+    "This notebook is used to implement the regression and classification analysis for the project.\n",
+    "The purpose of this analysis is to evaluate measurable characteristics of LEGO sets, such as price-per-piece, minifigure count, and age, to determine if a LEGO set is investment-worthy and if secondary prices can be predicted.\n",
+    "\n",
+    "The models used are:\n",
+    "\n",
+    " - Regression Models:\n",
+    "    - Baseline regression\n",
+    "    - log-transformed regression\n",
+    "    - Random Forest regression\n",
+    "\n",
+    " - Classification Models:\n",
+    "    - Baseline classification\n",
+    "    - Random Forest classification\n",
+    "\n"
    ]
   },
   {
@@ -21,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3fe6b2d7",
    "metadata": {},
    "outputs": [
@@ -160,6 +177,8 @@
    "id": "0ed193a9",
    "metadata": {},
    "source": [
+    "## Regression Modeling\n",
+    "\n",
     "The next cell will define the target variable for this regression model, \"aftermarket_value_ratio\", which is calculated using the secondary market price and MSRP.\n",
     "The ratio is used to normalize prices across sets and reflects investment performance.\n",
     "\n",
@@ -169,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c1dff95d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c1b0eebb",
    "metadata": {},
    "outputs": [],
@@ -212,13 +231,15 @@
    "id": "b120c3b6",
    "metadata": {},
    "source": [
+    "### Baseline Regression Model\n",
+    "\n",
     "A linear regression model is used as the baseline analytical method.\n",
     "This model provides a benchmark for assessing how well characteristics of a LEGO set will explain aftermarket performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c0628305",
    "metadata": {},
    "outputs": [
@@ -835,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "119c6ddc",
    "metadata": {},
    "outputs": [
@@ -889,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b8100782",
    "metadata": {},
    "outputs": [
@@ -972,7 +993,9 @@
    "id": "5e5fa1d4",
    "metadata": {},
    "source": [
-    "The output of the last cell indicates that the age of a LEGO set is the strongest indicator of its success in the aftermarket. At the same time, piece count and minifigure count have either no effect or an adverse effect on the resale price. The output also indicates that the price per piece is essential, as price efficiency matters."
+    "The output of the last cell indicates that the age of a LEGO set is the strongest indicator of its success in the aftermarket. At the same time, piece count and minifigure count have either no effect or an adverse effect on the resale price. The output also indicates that the price per piece is essential, as price efficiency matters.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -980,14 +1003,15 @@
    "id": "ca746a95",
    "metadata": {},
    "source": [
-    "---\n",
+    "### Log-Transformed Regression Model\n",
+    "\n",
     "Since the aftermarket value ratios are skewed by outliers, a log-transformed version of the target variable is used for evaluation.\n",
     "This transformation will help improve model fit and capture nonlinear relationships between the predictors and the target."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b75452ea",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1053,10 @@
    "id": "e896c5a1",
    "metadata": {},
    "source": [
-    "These results indicate that the log transformation improved our model, suggesting that aftermarket prices are multiplicative rather than additive. The model explains approximately 37% of the variance affecting the aftermarket price. Both errors, MAE and RSME, improved sufficiently for the predictions to be more trustworthy. In this model, outliers do not dominate the model's performance."
+    "These results indicate that the log transformation improved our model, suggesting that aftermarket prices are multiplicative rather than additive. The model explains approximately 37% of the variance affecting the aftermarket price. Both errors, MAE and RSME, improved sufficiently for the predictions to be more trustworthy. In this model, outliers do not dominate the model's performance.\n",
+    "\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1038,7 +1065,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "---\n",
+    "\n",
+    "### Random Forest Regression Model\n",
     "\n",
     "I will now use a random forest model to capture nonlinear relationships and feature interactions. The results of the log-transformed model justify the need for a random forest, as the variance, although improved, is still insufficient to claim that the log-transformed model is robust.\n",
     "\n",
@@ -1055,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "51ea4ec7",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b622c2f2",
    "metadata": {},
    "outputs": [],
@@ -1095,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "807a9608",
    "metadata": {},
    "outputs": [
@@ -1842,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3576db49",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5ba0be80",
    "metadata": {},
    "outputs": [
@@ -1986,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "faf0f335",
    "metadata": {},
    "outputs": [
@@ -2025,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "795367a6",
    "metadata": {},
    "outputs": [
@@ -2067,7 +2095,9 @@
    "metadata": {},
    "source": [
     "The Random Forest regression model captures nonlinear relationships and interaction effects that linear models cannot address.  \n",
-    "Performance improvements and feature importance metrics demonstrate the value of ensemble-based modeling for evaluating LEGO investment potential."
+    "Performance improvements and feature importance metrics demonstrate the value of ensemble-based modeling for evaluating LEGO investment potential.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -2075,8 +2105,8 @@
    "id": "ad127d22",
    "metadata": {},
    "source": [
-    "---\n",
-    "Next, I am adding a classification model to determine whether a LEGO set is investment-worthy."
+    "## Classification Models\n",
+    "Next, I am adding a classification model to determine whether a LEGO set is investment-worthy or not investment-worthy."
    ]
   },
   {
@@ -2084,12 +2114,14 @@
    "id": "029e6c0e",
    "metadata": {},
    "source": [
+    "### Baseline Classification Model\n",
+    "\n",
     "The first cell in this section will define a binary classification target to represent whether a LEGO set is investment-worthy. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ccecdbcb",
    "metadata": {},
    "outputs": [
@@ -2119,7 +2151,9 @@
    "metadata": {},
    "source": [
     "The output of the binary classification shows that about 65% of the LEGO sets from the dataset are not investment-worthy, and about 35% of the sets are worth investing in.\n",
-    "This output also serves as a baseline for the next model to compare to."
+    "This output also serves as a baseline for the next model to compare to.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -2127,12 +2161,14 @@
    "id": "01d17a05",
    "metadata": {},
    "source": [
+    "### Random Forest Classfication Model\n",
+    "\n",
     "The next cell will define features and the classification target. The same predictor variables are used as those in the regression model for consistency."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e348d54f",
    "metadata": {},
    "outputs": [],
@@ -2159,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "701164fd",
    "metadata": {},
    "outputs": [],
@@ -2179,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3115b8c1",
    "metadata": {},
    "outputs": [
@@ -2941,7 +2977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e18dfef6",
    "metadata": {},
    "outputs": [
@@ -2993,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "85d091e8",
    "metadata": {},
    "outputs": [
@@ -3048,7 +3084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "3ab217bf",
    "metadata": {},
    "outputs": [
@@ -3143,12 +3179,6 @@
     "The classification model demonstrates the feasibility of identifying investment-worthy LEGO sets using measurable set characteristics.  \n",
     "Results support the use of supervised classification as a complementary decision-support tool alongside regression analysis.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cba53aa2",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
